# EGPT

./: .gitignore  200fC.in  200fC_ERR.in  20fC.in  20fC_ERR.in  EPAC_PMQ_ARRAY.in  EPAC_PMQ_ARRAY_ERR.in  GPT_error_analysis.py  GPT_error_run.py  GPT_input_runner.py  GPT_plotting.py  GPT_run_analyse.py  GPTin_error_modifier.py  GPTin_tolerance.yml  GPTin_tolerance_temp.yml  LICENSE  README.md  generators.py  pyproject.toml
E_GPT/: GPT_config.yml  GPT_error_run.py  GPT_plotting.py  GPT_run_analyse.py  GPTin_error_modifier.py
examples/DIPOLE_TESTING/: dipole_standard.in  dipole_standard_ERR.in  dipole_test.yml
